v1.7/_sources/api/hyperspy.misc.rst.txt
hyperspy.misc package
=====================

Subpackages
-----------

.. toctree::
   :maxdepth: 4

   hyperspy.misc.eds
   hyperspy.misc.eels
   hyperspy.misc.holography
   hyperspy.misc.io
   hyperspy.misc.machine_learning

Submodules
----------

.. toctree::
   :maxdepth: 4

   hyperspy.misc.array_tools
   hyperspy.misc.axis_tools
   hyperspy.misc.config_dir
   hyperspy.misc.date_time_tools
   hyperspy.misc.elements
   hyperspy.misc.example_signals_loading
   hyperspy.misc.export_dictionary
   hyperspy.misc.hist_tools
   hyperspy.misc.ipython_tools
   hyperspy.misc.label_position
   hyperspy.misc.lowess_smooth
   hyperspy.misc.material
   hyperspy.misc.math_tools
   hyperspy.misc.model_tools
   hyperspy.misc.physics_tools
   hyperspy.misc.rgb_tools
   hyperspy.misc.signal_tools
   hyperspy.misc.slicing
   hyperspy.misc.test_utils
   hyperspy.misc.tv_denoise
   hyperspy.misc.utils

Module contents
---------------

.. automodule:: hyperspy.misc
   :members:
   :private-members:
   :no-undoc-members:
   :show-inheritance:
   :ignore-module-all:
